# GenAI_Task_on_CoT_ToT

./: .gitignore  pyproject.toml
1_Chain_of_thoughts_sentimentAnalysis/: main.py
1_CoT_sentiment_analysis_task/: main2.py
1_CoT_sentiment_analysis_task/analysis/: sentiment_analyzer.py
1_CoT_sentiment_analysis_task/data/: reviews.csv
1_CoT_sentiment_analysis_task/prompts/: cot_prompt.txt
2_Tree_of_Thoughts_Hyperparameter_tuning/: analyze_results.py  main.py  train_model.py
2_Tree_of_Thoughts_Hyperparameter_tuning/outputs/: final_analysis.txt  hyperparameter_results.csv
2_Tree_of_Thoughts_Hyperparameter_tuning/prompts/: tot_prompt.txt
