[project]
name = "sentiment-with-cot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=2.8.0",
    "numpy>=2.2.6",
    "openai>=2.41.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]
